[package]
name = "tinytorrent"
version = "0.1.0"
edition = "2021"
authors = ["not-jan"]
license = "MIT"

[[bin]]
name = "tinytorrent"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.86"
binrw = "0.14.0"
bytes = "1.6.0"
clap = { version = "4.5.6", features = ["derive", "env"] }
dashmap = "5.5.3"
env_logger = "0.11.3"
futures = "0.3.30"
lava_torrent = "0.11.1"
log = "0.4.21"
serde = "1.0.203"
serde_bencoded = "0.3"
serde_bytes = "0.11.14"
serde_derive = "1.0.203"
sha1 = "0.10.6"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-util = { version = "0.7.11", features = ["net", "codec"] }
url = "2.5.1"
